@@ -184,18 +184,19 @@ CMuleListCtrl( parent, winid, pos, size, style | wxLC_OWNERDRAW, validator, name
 
 	m_hilightUnfocusBrush = CMuleColour(wxSYS_COLOUR_BTNSHADOW).Blend(125).GetBrush();
 
-	InsertColumn( 0,  _("File Name"),		wxLIST_FORMAT_LEFT, 260, wxT("N") );
-	InsertColumn( 1,  _("Size"),			wxLIST_FORMAT_LEFT,  60, wxT("Z") );
-	InsertColumn( 2,  _("Transferred"),		wxLIST_FORMAT_LEFT,  65, wxT("T") );
-	InsertColumn( 3,  _("Completed"),		wxLIST_FORMAT_LEFT,  65, wxT("C") );
-	InsertColumn( 4,  _("Speed"),			wxLIST_FORMAT_LEFT,  65, wxT("S") );
-	InsertColumn( 5,  _("Progress"),		wxLIST_FORMAT_LEFT, 170, wxT("P") );
-	InsertColumn( 6,  _("Sources"),			wxLIST_FORMAT_LEFT,  50, wxT("u") );
-	InsertColumn( 7,  _("Priority"),		wxLIST_FORMAT_LEFT,  55, wxT("p") );
-	InsertColumn( 8,  _("Status"),			wxLIST_FORMAT_LEFT,  70, wxT("s") );
-	InsertColumn( 9,  _("Time Remaining"),		wxLIST_FORMAT_LEFT, 110, wxT("r") );
-	InsertColumn( 10, _("Last Seen Complete"),	wxLIST_FORMAT_LEFT, 220, wxT("c") );
-	InsertColumn( 11, _("Last Reception"),		wxLIST_FORMAT_LEFT, 220, wxT("R") );
+	InsertColumn( ColumnPart,			_("Part"),					wxLIST_FORMAT_LEFT,  30, wxT("a") );
+	InsertColumn( ColumnFileName,		_("File Name"),				wxLIST_FORMAT_LEFT, 260, wxT("N") );
+	InsertColumn( ColumnSize,			_("Size"),					wxLIST_FORMAT_LEFT,  60, wxT("Z") );
+	InsertColumn( ColumnTransferred,	_("Transferred"),			wxLIST_FORMAT_LEFT,  65, wxT("T") );
+	InsertColumn( ColumnCompleted,		_("Completed"),				wxLIST_FORMAT_LEFT,  65, wxT("C") );
+	InsertColumn( ColumnSpeed,			_("Speed"),					wxLIST_FORMAT_LEFT,  65, wxT("S") );
+	InsertColumn( ColumnProgress,		_("Progress"),				wxLIST_FORMAT_LEFT, 170, wxT("P") );
+	InsertColumn( ColumnSources,		_("Sources"),				wxLIST_FORMAT_LEFT,  50, wxT("u") );
+	InsertColumn( ColumnPriority,		_("Priority"),				wxLIST_FORMAT_LEFT,  55, wxT("p") );
+	InsertColumn( ColumnStatus,			_("Status"),				wxLIST_FORMAT_LEFT,  70, wxT("s") );
+	InsertColumn( ColumnTimeRemaining,  _("Time Remaining"),		wxLIST_FORMAT_LEFT, 110, wxT("r") );
+	InsertColumn( ColumnLastSeenComplete, _("Last Seen Complete"),	wxLIST_FORMAT_LEFT, 220, wxT("c") );
+	InsertColumn( ColumnLastReception,	_("Last Reception"),		wxLIST_FORMAT_LEFT, 220, wxT("R") );
 
 	m_category = 0;
 	m_completedFiles = 0;
@@ -203,6 +204,8 @@ CMuleListCtrl( parent, winid, pos, size, style | wxLC_OWNERDRAW, validator, name
 	LoadSettings();
 }
 
+// This is the order the columns had before extendable list-control settings save/load code was introduced.
+// Don't touch when inserting new columns!
 wxString CDownloadListCtrl::GetOldColumnOrder() const
 {
 	return wxT("N,Z,T,C,S,P,u,p,s,r,c,R");
@@ -1171,7 +1174,7 @@ void CDownloadListCtrl::OnDrawItem(
 
 			// Make a copy of the current rectangle so we can apply specific tweaks
 			wxRect target_rec = cur_rec;
-			if ( i == 5 ) {
+			if ( i == ColumnProgress ) {
 				tree_show = ( listitem.GetWidth() > 0 );
 
 				tree_start = cur_rec.x - iOffset;
@@ -1255,16 +1258,20 @@ void CDownloadListCtrl::DrawFileItem( wxDC* dc, int nColumn, const wxRect& rect,
 	wxString text;
 
 	switch (nColumn) {
-	// Filename
-	case 0: {
-		// show no. of partfile in filename column
-		wxString filename;
-		if (thePrefs::ShowPartFileNumber()) {
-			if (file->IsPartFile() && !(file->GetStatus() == PS_COMPLETE)) {
-				filename = CFormat(wxT("[%s] ")) % file->GetPartMetFileName().RemoveAllExt();
-			}
+	// Part Number
+	case ColumnPart: {
+	        wxString partno;
+
+
+		if (file->IsPartFile() && !(file->GetStatus() == PS_COMPLETE)) {
+		  partno = CFormat(wxT("%s")) % file->GetPartMetFileName().RemoveAllExt();
 		}
-		filename += file->GetFileName().GetPrintable();
+		dc->DrawText(partno, rect.GetX(), rect.GetY());
+	}
+	break;
+	// Filename
+	case ColumnFileName: {
+		wxString filename = file->GetFileName().GetPrintable();
 
 		if (file->HasRating() || file->HasComment()) {
 			int image = Client_CommentOnly_Smiley;
@@ -1288,29 +1295,30 @@ void CDownloadListCtrl::DrawFileItem( wxDC* dc, int nColumn, const wxRect& rect,
 	break;
 
 	// Filesize
-	case 1:
+	case ColumnSize:
 		text = CastItoXBytes( file->GetFileSize() );
 		break;
 
 	// Transferred
-	case 2:
+	case ColumnTransferred:
 		text = CastItoXBytes( file->GetTransferred() );
 		break;
 	
 	// Completed
-	case 3:
+	case ColumnCompleted:
 		text = CastItoXBytes( file->GetCompletedSize() );
 		break;
 	
 	// Speed
-	case 4:	// speed
+	case ColumnSpeed:
 		if ( file->GetTransferingSrcCount() ) {
 			text = wxString::Format( wxT("%.1f "), file->GetKBpsDown() ) +
 				_("kB/s");
 		}
 		break;
-	
-	case 5:	// progress
+
+	// Progress	
+	case ColumnProgress:
 	{
 		if (thePrefs::ShowProgBar())
 		{
@@ -1379,7 +1387,7 @@ void CDownloadListCtrl::DrawFileItem( wxDC* dc, int nColumn, const wxRect& rect,
 	break;
 
 	// Sources
-	case 6:	{
+	case ColumnSources:	{
 		uint16 sc = file->GetSourceCount();
 		uint16 ncsc = file->GetNotCurrentSourcesCount();
 		if ( ncsc ) {
@@ -1400,17 +1408,17 @@ void CDownloadListCtrl::DrawFileItem( wxDC* dc, int nColumn, const wxRect& rect,
 	}
 
 	// Priority
-	case 7:
+	case ColumnPriority:
 		text = PriorityToStr( file->GetDownPriority(), file->IsAutoDownPriority() );
 		break;
 			
 	// File-status
-	case 8:
+	case ColumnStatus:
 		text = file->getPartfileStatus();
 		break;
 	
 	// Remaining
-	case 9: {
+	case ColumnTimeRemaining: {
 		if ((file->GetStatus() != PS_COMPLETING) && file->IsPartFile()) {
 			uint64 remainSize = file->GetFileSize() - file->GetCompletedSize();
 			sint32 remainTime = file->getTimeRemaining();
@@ -1427,7 +1435,7 @@ void CDownloadListCtrl::DrawFileItem( wxDC* dc, int nColumn, const wxRect& rect,
 	}
 	
 	// Last seen completed
-	case 10: {
+	case ColumnLastSeenComplete: {
 		if ( file->lastseencomplete ) {
 			text = wxDateTime( file->lastseencomplete ).Format( _("%y/%m/%d %H:%M:%S") );
 		} else {
@@ -1436,8 +1444,8 @@ void CDownloadListCtrl::DrawFileItem( wxDC* dc, int nColumn, const wxRect& rect,
 		break;
 	}
 	
-	// Laste received
-	case 11: {
+	// Last received
+	case ColumnLastReception: {
 		const time_t lastReceived = file->GetLastChangeDatetime();
 		if (lastReceived) {
 			text = wxDateTime(lastReceived).Format( _("%y/%m/%d %H:%M:%S") );
@@ -1463,7 +1471,7 @@ void CDownloadListCtrl::DrawSourceItem(
 
 	switch (nColumn) {
 		// Client name + various icons
-		case 0: {
+		case ColumnFileName: {
 			wxRect cur_rec = rect;
 			// +3 is added by OnDrawItem()... so take it off
 			// Kry - eMule says +1, so I'm trusting it
@@ -1599,14 +1607,14 @@ void CDownloadListCtrl::DrawSourceItem(
 			}
 			break;
 
-		case 3:	// completed
+		case ColumnCompleted:	// completed
 			if (item->GetType() != A4AF_SOURCE && client->GetTransferredDown()) {
 				buffer = CastItoXBytes(client->GetTransferredDown());
 				dc->DrawText(buffer, rect.GetX(), rect.GetY());
 			}
 			break;
 
-		case 4:	// speed
+		case ColumnSpeed:	// speed
 			if (item->GetType() != A4AF_SOURCE && client->GetKBpsDown() > 0.001) {
 				buffer = wxString::Format(wxT("%.1f "),
 						client->GetKBpsDown()) + _("kB/s");
@@ -1614,7 +1622,7 @@ void CDownloadListCtrl::DrawSourceItem(
 			}
 			break;
 
-		case 5:	// file info
+		case ColumnProgress:	// file info
 			if ( thePrefs::ShowProgBar() ) {
 				int iWidth = rect.GetWidth() - 2;
 				int iHeight = rect.GetHeight() - 2;
@@ -1687,13 +1695,13 @@ void CDownloadListCtrl::DrawSourceItem(
 			}
 			break;
 
-		case 6: {
+		case ColumnSources: {
 				// Version
 				dc->DrawText(client->GetClientVerString(), rect.GetX(), rect.GetY());
 				break;
 			}
 
-		case 7:	// prio
+		case ColumnPriority:	// prio
 			// We only show priority for sources actually queued for that file
 			if (	item->GetType() != A4AF_SOURCE &&
 				client->GetDownloadState() == DS_ONQUEUE ) {
@@ -1726,7 +1734,7 @@ void CDownloadListCtrl::DrawSourceItem(
 			}
 			break;
 
-		case 8:	// status
+		case ColumnStatus:	// status
 			if (item->GetType() != A4AF_SOURCE) {
 				buffer = DownloadStateToStr( client->GetDownloadState(), 
 					client->IsRemoteQueueFull() );
@@ -1741,7 +1749,7 @@ void CDownloadListCtrl::DrawSourceItem(
 			dc->DrawText(buffer, rect.GetX(), rect.GetY());
 			break;
 		// Source comes from?
-		case 9: {
+		case ColumnTimeRemaining: {
 			buffer = wxGetTranslation(OriginToText(client->GetSourceFrom()));
 			dc->DrawText(buffer, rect.GetX(), rect.GetY());
 			break;
@@ -1829,71 +1837,78 @@ int CDownloadListCtrl::Compare( const CPartFile* file1, const CPartFile* file2, 
 	int result = 0;
 
 	switch (lParamSort) {
+	// Sort by part number
+	case ColumnPart:
+		result = CmpAny(
+			file1->GetPartMetFileName().RemoveAllExt(),
+			file2->GetPartMetFileName().RemoveAllExt() );
+		break;
+
 	// Sort by filename
-	case 0:
+	case ColumnFileName:
 		result = CmpAny(
 			file1->GetFileName(),
 			file2->GetFileName() );
 		break;
 
 	// Sort by size
-	case 1:
+	case ColumnSize:
 		result = CmpAny(
 			file1->GetFileSize(),
 			file2->GetFileSize() );
 		break;
 
 	// Sort by transferred
-	case 2:
+	case ColumnTransferred:
 		result = CmpAny(
 			file1->GetTransferred(),
 			file2->GetTransferred() );
 		break;
 
 	// Sort by completed
-	case 3:
+	case ColumnCompleted:
 		result = CmpAny(
 			file1->GetCompletedSize(),
 			file2->GetCompletedSize() );
 		break;
 
 	// Sort by speed
-	case 4:
+	case ColumnSpeed:
 		result = CmpAny(
 			file1->GetKBpsDown() * 1024,
 			file2->GetKBpsDown() * 1024 );
 		break;
 
 	// Sort by percentage completed
-	case 5:
+	case ColumnProgress:
 		result = CmpAny(
 			file1->GetPercentCompleted(),
 			file2->GetPercentCompleted() );
 		break;
 
 	// Sort by number of sources
-	case 6:
+	case ColumnSources:
 		result = CmpAny(
 			file1->GetSourceCount(),
 			file2->GetSourceCount() );
 		break;
 
 	// Sort by priority
-	case 7:
+	case ColumnPriority:
 		result = CmpAny(
 			file1->GetDownPriority(),
 			file2->GetDownPriority() );
 		break;
 
 	// Sort by status
-	case 8:
+	case ColumnStatus:
 		result = CmpAny(
 			file1->getPartfileStatusRang(),
 			file2->getPartfileStatusRang() );
 		break;
 
 	// Sort by remaining time
-	case 9:
+	case ColumnTimeRemaining:
 		if (file1->getTimeRemaining() == -1) {
 			if (file2->getTimeRemaining() == -1) {
 				result = 0;
@@ -1912,14 +1927,14 @@ int CDownloadListCtrl::Compare( const CPartFile* file1, const CPartFile* file2, 
 		break;
 
 	// Sort by last seen complete
-	case 10:
+	case ColumnLastSeenComplete:
 		result = CmpAny(
 			file1->lastseencomplete,
 			file2->lastseencomplete );
 		break;
 
 	// Sort by last reception
-	case 11:
+	case ColumnLastReception:
 		result = CmpAny(
 			file1->GetLastChangeDatetime(),
 			file2->GetLastChangeDatetime() );
@@ -1935,30 +1950,31 @@ int CDownloadListCtrl::Compare(
 {
 	switch (lParamSort) {
 		// Sort by name
-		case 0:
+		case ColumnPart:
+		case ColumnFileName:
 			return CmpAny( client1->GetUserName(), client2->GetUserName() );
 	
 		// Sort by status (size field)
-		case 1:
+		case ColumnSize:
 			return CmpAny( client1->GetDownloadState(), client2->GetDownloadState() );
 	
 		// Sort by transferred in the following fields
-		case 2:	
-		case 3:
+		case ColumnTransferred:	
+		case ColumnCompleted:
 			return CmpAny( client1->GetTransferredDown(), client2->GetTransferredDown() );
 
 		// Sort by speed
-		case 4:
+		case ColumnSpeed:
 			return CmpAny( client1->GetKBpsDown(), client2->GetKBpsDown() );
 		
 		// Sort by parts offered (Progress field)
-		case 5:
+		case ColumnProgress:
 			return CmpAny(
 				client1->GetAvailablePartCount(),
 				client2->GetAvailablePartCount() );
 		
 		// Sort by client version
-		case 6: {
+		case ColumnSources: {
 			if (client1->GetClientSoft() != client2->GetClientSoft()) {
 				return client1->GetSoftStr().Cmp(client2->GetSoftStr());
 			}
@@ -1971,7 +1987,7 @@ int CDownloadListCtrl::Compare(
 		}
 		
 		// Sort by Queue-Rank
-		case 7: {
+		case ColumnPriority: {
 			// This will sort by download state: Downloading, OnQueue, Connecting ...
 			// However, Asked For Another will always be placed last, due to
 			// sorting in SortProc
@@ -2008,7 +2024,7 @@ int CDownloadListCtrl::Compare(
 		}
 		
 		// Sort by state
-		case 8: {
+		case ColumnStatus: {
 			if (client1->GetDownloadState() == client2->GetDownloadState()) {
 				return CmpAny(
 					client1->IsRemoteQueueFull(),
@@ -2021,7 +2037,7 @@ int CDownloadListCtrl::Compare(
 		}
 
 		// Source of source ;)
-		case 9:
+		case ColumnTimeRemaining:
 			return CmpAny(client1->GetSourceFrom(), client2->GetSourceFrom());
 		
 		default:
